# pylegend

./: .gitignore  .gitlab-ci.yml  .gs-project.yml  .safety-policy.yml  .trivyignore  .whitesource  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.spdx  MAINTAINERS.md  NOTICE  README.md  coverage.xml  dev.requirements.txt  launch_legend_server.py  pyproject.toml  requirements.txt  sonar-project.properties  test_sql_integration.py  whitesource.config
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: meeting-minutes.md
.github/workflows/: build-ci.yml  cve-scanning.yml  license-scanning.yml  release.yml  test-result.yml
.github/workflows/typing/: config.cfg
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-fix-pure-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-HUMAN-UAT.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-VERIFICATION.md
.planning/phases/02-remove-legacy-code-and-sql-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-PATTERNS.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
ILegend-JupyterMultiKernel/: Demo.ipynb  README.md
ILegend-JupyterMultiKernel/Kernel/: LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
ILegend-JupyterMultiKernel/Kernel/ilegend_kernel/: __init__.py  __main__.py  ilegend_kernel_config.py  install.py  kernel.py  magics.py
ILegend-JupyterMultiKernel/Kernel/ilegend_kernel/kernelspec/: kernel.js
ILegend-JupyterMultiKernel/KernelSwitch-UI/: README.md  package.json  tsconfig.json
ILegend-JupyterMultiKernel/KernelSwitch-UI/src/: index.ts
ILegend-JupyterMultiKernel/KernelSwitch-UI/style/: index.css
ILegend-JupyterMultiKernel/Server/: DataServer.java  LoadController.java  PyLegendSqlServer.java  ServerState.java
ILegend-JupyterMultiKernel/SyntaxHighlighting-UI/: .gitignore  .prettierignore  README.md  install.json  package.json  pyproject.toml  rollup.config.js  setup.py  tsconfig.json
ILegend-JupyterMultiKernel/SyntaxHighlighting-UI/src/: ilegend.grammar  ilegend.grammar.d.ts  ilegend.grammar.js  ilegend.grammar.terms.js  index.ts
deployment/snapshot/: Dockerfile
deployment/tag/: Dockerfile
docs/: Makefile
docs/source/: conf.py  dyn_nbsphinx_ext.py  index.rst  legendql_api_local_tds_client.py  northwind_service_frame.py
docs/source/_templates/: layout.html  navigation.html
docs/source/api/: api.rst  core_language_boolean.rst  core_language_boolean_collection.rst  core_language_date.rst  core_language_date_collection.rst  core_language_datetime.rst  core_language_datetime_collection.rst  core_language_decimal.rst  core_language_decimal_collection.rst  core_language_float.rst  core_language_float_collection.rst  core_language_integer.rst  core_language_integer_collection.rst  core_language_number.rst  core_language_number_collection.rst  core_language_number_pair_collection.rst  core_language_strictdate.rst  core_language_strictdate_collection.rst  core_language_string.rst  core_language_string_collection.rst  legendql_tds_frame.rst  pandas_groupby_series.rst  pandas_groupby_tds_frame.rst  pandas_series.rst  pandas_tds_frame.rst  pandas_window_series.rst  pandas_window_tds_frame.rst  sort.rst
legendql/: __init__.py  examples.py  functions.py  parser.py  ql.py  query.py  result.py  sql_examples.py  sql_parser.py  store.py
legendql/dialect/: __init__.py  type.py
legendql/model/: functions.py  metamodel.py  schema.py
pylegend/: __init__.py  _typing.py  legacy_api_tds_client.py  legend_api_tds_client.py  legendql_api_local_tds_client.py  legendql_api_tds_client.py
pylegend/core/: __init__.py  project_cooridnates.py
pylegend/core/request/: auth.py  (+4 more)
pylegend/samples/: __init__.py  local_legend_env.py
pylegend/tests/: conftest.py
pylegend/utils/: class_utils.py  dynamic_port_generator.py  grammar_method.py
tests/: conftest.py  test_legacy_api_tds_client.py  test_legend_api_tds_client.py  test_legendql_api_local_tds_client.py  test_legendql_api_tds_client.py
tests/core/: test_project_coorindates.py
tests/test_helpers/: __init__.py  legend_service_frame.py  test_legend_service_frame.py  test_legend_service_frames.py
tests/utils/: test_class_utils.py
(+555 files in other folders)
