[tool.poetry]
name = "pylegend"
version = "0.6.0"
description = "Python language binding for Legend data management platform"
authors = ["PyLegend Maintainers <legend@finos.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/finos/pylegend"
packages = [
    { include = "pylegend" }
]


[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = ">=2.27.1"
ijson = ">=3.1.4"
pandas = [
    { version = ">=1.0.0", python = "<3.12" },
    { version = ">=2.1.1", python = ">=3.12" }
]
numpy = [
    { version = ">=1.20.0", python = "<3.12" },
    { version = ">=1.26.0", python = ">=3.12" }
]


[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=3.0.0"
types-requests = ">=2.28.0"
pandas-stubs = ">=1.5.0"
mockito = ">=1.0.0"
testcontainers = ">=3.0.0"
sqlalchemy = ">=2.0.0"
pg8000 = ">=1.0.0"
pymysql = ">=1.0.0"
cryptography = ">=40.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
