[project]
name = "pylegend"
version = "1.1.3"
description = "Python language binding for Legend data management platform"
authors = [{ name = "PyLegend Maintainers", email = "legend@finos.org" }]
requires-python = ">=3.9,<3.15"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.27.1",
    "ijson>=3.1.4",
    "pandas>=1.0.0 ; python_full_version < '3.12'",
    "pandas>=2.1.1 ; python_full_version >= '3.12'",
    "numpy>=1.20.0 ; python_full_version < '3.12'",
    "numpy>=1.26.0 ; python_full_version >= '3.12'",
    "testcontainers>=3.0.0",
]

[project.urls]
Repository = "https://github.com/finos/pylegend"

[dependency-groups]
test = [
    "pytest>=9.1.1,<9.2.0; python_full_version < '3.11'",
    "pytest>=7.0.0 ; python_full_version >= '3.11'",
    "pytest-cov>=3.0.0",
    "mockito>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pg8000>=1.0.0",
    "pymysql>=1.0.0",
    "cryptography>=40.0.0",
    "wrapt<2.0.0",
]
typing = [
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "pandas-stubs>=1.5.0",
]
lint = [
    "flake8>=6.0.0",
    "pylegend-copyright-checker",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "IPython",
    "sphinx-autodoc-typehints",
    "tqdm",
    "nbsphinx",
    "nbformat",
    "jupyter",
    "ipykernel",
]

[tool.uv]
default-groups = ["test", "typing", "lint"]

[tool.uv.sources]
pylegend-copyright-checker = { path = ".github/workflows/lint/pylegend_copyright_checker" }

[tool.uv.build-backend]
module-name = ["pylegend"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
